--- a/package.json
+++ b/package.json
@@ -1,22 +1,58 @@
 {
-  "name": "pijama-bem-monorepo",
+  "name": "pijama",
   "version": "0.0.0",
   "author": "Evgeniy Malchenko",
   "license": "MIT",
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
   "scripts": {
-    "build": "yarn run build:kit && yarn run build:storybook",
-    "build:kit": "yarn workspace pijama-ui run build",
-    "build:storybook": "yarn workspace pijama-ui-storybook build",
-    "dev": "concurrently \"yarn:dev:*\"",
-    "dev:kit": "yarn workspace pijama-ui run dev",
-    "dev:storybook": "yarn workspace pijama-ui-storybook run dev"
+    "clear": "rimraf ./ui",
+    "build-storybook": "build-storybook",
+    "build": "yarn run clear && concurrently \"yarn:build:*\"",
+    "build:kit": "node ./infra/esbuild.js",
+    "build:types": "tsc -p tsconfig.build.json --emitDeclarationOnly",
+    "dev": "yarn run clear && concurrently \"yarn:dev:*\"",
+    "dev:kit": "node ./infra/esbuild.js --watch",
+    "dev:kit:types": "tsc -p tsconfig.build.json --emitDeclarationOnly --watch",
+    "dev:storybook": "start-storybook -p 6006",
+    "lint": "eslint --max-warnings 0 ./src && prettier --check ./src ./infra ./.storybook",
+    "lint:fix": "eslint --fix ./src && prettier --write ./src ./infra ./.storybook"
+  },
+  "peerDependencies": {
+    "@bem-react/classname": "^1.5.12",
+    "@bem-react/core": "^3.0.8",
+    "react": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.5",
+    "@bem-react/classname": "^1.5.12",
+    "@bem-react/core": "^3.0.8",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-interactions": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/builder-vite": "^0.1.36",
+    "@storybook/react": "^6.5.9",
+    "@storybook/testing-library": "^0.0.13",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "^17.0.2",
+    "@vitejs/plugin-react": "^1.3.0",
+    "babel-loader": "^8.2.5",
     "chromatic": "^6.5.6",
-    "concurrently": "^7.2.2"
+    "concurrently": "^7.2.2",
+    "esbuild": "^0.14.43",
+    "esbuild-node-externals": "^1.4.1",
+    "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-qiwi": "^1.17.1",
+    "fast-glob": "^3.2.11",
+    "postcss": "^8.4.14",
+    "postcss-modules": "^4.3.1",
+    "prettier": "^2.7.1",
+    "prettier-config-qiwi": "^1.7.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.7.3",
+    "vite": "^2.9.9"
   }
 }
