--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     }
   ],
   "rules": {
+    "@typescript-eslint/consistent-type-imports": "error",
     "camelcase": "off",
     "@typescript-eslint/no-unused-vars": [
       "error",
