--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@bem-react/core": "^3.0.8",
     "react": "^17.0.2"
   },
+  "resolutions": {
+    "@types/react": "^17.0.2"
+  },
   "devDependencies": {
     "@babel/core": "^7.18.5",
     "@bem-react/classname": "^1.5.12",
@@ -33,8 +36,7 @@
     "@storybook/builder-vite": "^0.1.36",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
-    "@types/react": "17.0.2",
-    "@types/react-dom": "^17.0.2",
+    "@types/react": "^17.0.2",
     "@vitejs/plugin-react": "^1.3.0",
     "babel-loader": "^8.2.5",
     "chromatic": "^6.5.6",
