--- a/package.json
+++ b/package.json
@@ -26,18 +26,17 @@
     "@types/react": "^17.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.5",
     "@bem-react/classname": "^1.5.12",
     "@bem-react/core": "^3.0.8",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-interactions": "^6.5.9",
     "@storybook/addon-links": "^6.5.9",
-    "@storybook/builder-vite": "^0.1.36",
+    "@storybook/builder-webpack5": "^6.5.9",
+    "@storybook/manager-webpack5": "^6.5.9",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
     "@types/react": "^17.0.2",
-    "@vitejs/plugin-react": "^1.3.0",
     "babel-loader": "^8.2.5",
     "chromatic": "^6.5.6",
     "concurrently": "^7.2.2",
@@ -54,7 +53,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rimraf": "^3.0.2",
-    "typescript": "^4.7.3",
-    "vite": "^2.9.9"
+    "typescript": "^4.7.3"
   }
 }
