--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dev:kit:types": "tsc -p tsconfig.build.json --emitDeclarationOnly --watch",
     "dev:storybook": "start-storybook -p 6006",
     "lint": "eslint --max-warnings 0 ./src && prettier --check ./src ./infra ./.storybook",
-    "lint:fix": "eslint --fix ./src && prettier --write ./src ./infra ./.storybook"
+    "lint:fix": "eslint --fix ./src && prettier --write ./src ./infra ./.storybook",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "peerDependencies": {
     "@bem-react/classname": "^1.5.12",
@@ -36,6 +38,7 @@
     "@storybook/manager-webpack5": "^6.5.9",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
+    "@types/jest": "^28.1.1",
     "@types/react": "^17.0.2",
     "chromatic": "^6.5.6",
     "concurrently": "^7.2.2",
@@ -45,6 +48,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-qiwi": "^1.17.1",
     "fast-glob": "^3.2.11",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
     "postcss": "^8.4.14",
     "postcss-modules": "^4.3.1",
     "prettier": "^2.7.1",
@@ -52,6 +57,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rimraf": "^3.0.2",
+    "ts-jest": "^28.0.5",
     "typescript": "^4.7.3"
   }
 }
