--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,30 +43,30 @@ jobs:
       - name: Test
         run: yarn run test
 
-  chromatic:
-    name: Chromatic
-    runs-on: ubuntu-20.04
+  # chromatic:
+  #   name: Chromatic
+  #   runs-on: ubuntu-20.04
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          # Chromatic needs the full Git history to keep track of changes in repository
-          fetch-depth: 0
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+  #       with:
+  #         # Chromatic needs the full Git history to keep track of changes in repository
+  #         fetch-depth: 0
 
-      - name: Setup Node
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16
-          cache: 'yarn'
+  #     - name: Setup Node
+  #       uses: actions/setup-node@v2
+  #       with:
+  #         node-version: 16
+  #         cache: 'yarn'
 
-      - name: Install dependencies
-        run: yarn
+  #     - name: Install dependencies
+  #       run: yarn
 
-      - name: Build UI
-        run: yarn run build
+  #     - name: Build UI
+  #       run: yarn run build
 
-      - name: Publish to Chromatic
-        uses: chromaui/action@v1
-        with:
-          projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+  #     - name: Publish to Chromatic
+  #       uses: chromaui/action@v1
+  #       with:
+  #         projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
