feat(button): variant brand with sizes and themes

--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
   "scripts": {
     "clear": "rimraf ./ui",
     "build-storybook": "build-storybook",
-    "build": "yarn run clear && concurrently \"yarn:build:*\"",
+    "build": "yarn run clear && concurrently \"yarn:build:*\" -g",
     "build:kit": "node ./infra/esbuild.js",
     "build:types": "tsc -p tsconfig.build.json --emitDeclarationOnly",
     "dev": "yarn run clear && concurrently \"yarn:dev:*\"",
     "dev:kit": "node ./infra/esbuild.js --watch",
     "dev:kit:types": "tsc -p tsconfig.build.json --emitDeclarationOnly --watch",
     "dev:storybook": "start-storybook -p 6006",
-    "lint": "eslint --max-warnings 0 ./src && prettier --check ./src ./infra ./.storybook",
+    "lint": "concurrently \"yarn:lint:check:*\" -g",
+    "lint:check:eslint": "eslint --max-warnings 0 ./src",
+    "lint:check:prettier": "prettier --check ./src ./infra ./.storybook",
+    "lint:check:stylelint": "stylelint ./src/**/*.css",
     "lint:fix": "eslint --fix ./src && prettier --write ./src ./infra ./.storybook",
     "test": "jest",
     "test:watch": "jest --watch"
@@ -34,6 +37,7 @@
     "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-interactions": "^6.5.9",
     "@storybook/addon-links": "^6.5.9",
+    "@storybook/addon-storysource": "^6.5.9",
     "@storybook/builder-webpack5": "^6.5.9",
     "@storybook/manager-webpack5": "^6.5.9",
     "@storybook/react": "^6.5.9",
@@ -51,12 +55,18 @@
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
     "postcss": "^8.4.14",
+    "postcss-mixins": "^9.0.2",
     "postcss-modules": "^4.3.1",
+    "postcss-nested": "^5.0.6",
     "prettier": "^2.7.1",
     "prettier-config-qiwi": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rimraf": "^3.0.2",
+    "stylelint": "^14.9.1",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^26.0.0",
+    "stylelint-order": "^5.0.0",
     "ts-jest": "^28.0.5",
     "typescript": "^4.7.3"
   }
