--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -7,5 +7,5 @@
     "declarationDir": "./"
   },
   "include": ["src/**/*", "global.d.ts"],
-  "exclude": ["node_modules", "src/**/*.test.tsx", "src/**/*.stories.tsx"]
+  "exclude": ["node_modules", "src/**/*.spec.(js|ts|jsx|tsx)", "src/**/*.stories.tsx"]
 }
