--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@storybook/manager-webpack5": "^6.5.9",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.5",
     "@types/jest": "^28.1.1",
     "@types/react": "^17.0.2",
     "chromatic": "^6.5.6",
@@ -52,6 +54,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-qiwi": "^1.17.1",
     "fast-glob": "^3.2.11",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
     "postcss": "^8.4.14",
