chore: separate theme to mixins

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,6 +5,7 @@
     "selector-class-pattern": null,
     "color-hex-length": "long",
     "color-hex-case": "lower",
+    "at-rule-no-unknown": null,
     "custom-property-pattern": "^qw-([a-z][a-z0-9]*)(-[a-z0-9]+)*(--[a-z0-9]+)*$",
     "no-descending-specificity": true,
     "order/order": [
