--- a/package.json
+++ b/package.json
@@ -73,5 +73,8 @@
     "stylelint-order": "^5.0.0",
     "ts-jest": "^28.0.5",
     "typescript": "^4.7.3"
+  },
+  "dependencies": {
+    "@qiwi/pijma-fonts": "^1.0.0"
   }
 }
