--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.1",
     "jest-environment-jsdom": "^28.1.1",
+    "plop": "^3.1.1",
     "postcss": "^8.4.14",
     "postcss-mixins": "^9.0.2",
     "postcss-modules": "^4.3.1",
