feat: use style-dictionary

--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "clear": "rimraf ./ui",
+    "clean": "rimraf ./ui && rimraf ./src/ui/Theme/presets",
     "bundle": "node ./infra/bundles.js",
     "build-storybook": "build-storybook",
-    "build": "yarn run clear && concurrently \"yarn:build:*\" -g",
+    "build-tokens": "node ./infra/tokens/build.js",
+    "prebuild": "yarn run clean && yarn run build-tokens",
+    "build": "concurrently \"yarn:build:*\" -g",
     "build:kit": "node ./infra/esbuild.js",
     "build:types": "tsc -p tsconfig.build.json --emitDeclarationOnly",
-    "dev": "yarn run clear && concurrently \"yarn:dev:*\"",
+    "predev": "yarn run clean && yarn run build-tokens",
+    "dev": "concurrently \"yarn:dev:*\"",
     "dev:kit": "node ./infra/esbuild.js --watch",
     "dev:kit:types": "tsc -p tsconfig.build.json --emitDeclarationOnly --watch",
     "dev:storybook": "start-storybook -p 6006",
+    "dev:tokens": "chokidar  \"./src/**/*.tokens.json\" -c \"yarn run build-tokens\"",
     "lint": "concurrently \"yarn:lint:check:*\" -g",
     "lint:check:eslint": "eslint --max-warnings 0 ./src",
     "lint:check:prettier": "prettier --check ./src ./infra ./.storybook",
@@ -49,6 +53,7 @@
     "@testing-library/react": "^12.1.5",
     "@types/jest": "^28.1.1",
     "@types/react": "^17.0.2",
+    "chokidar-cli": "^3.0.0",
     "chromatic": "^6.5.6",
     "concurrently": "^7.2.2",
     "esbuild": "^0.14.43",
@@ -70,6 +75,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rimraf": "^3.0.2",
+    "style-dictionary": "^3.7.1",
     "stylelint": "^14.9.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^26.0.0",
